--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "less-loader": "^7.3.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-cropper": "^0.5.8",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
