--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.6",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
+    "jsencrypt": "^3.3.1",
     "less": "^4.1.2",
     "less-loader": "^7.3.0",
     "nprogress": "^0.2.0",
