较大改动，添加在线聊天第一版，解决菜单路由添加重复问题，去除tomcat的/dadtaview前缀， 左侧菜单抽取组件并优化滚动条显示，添加路由刷新功能，头像生成抽取成工具方法，表格高度自适应

--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,6 @@ VUE_APP_TITLE = autumn-vue管理系统
 ENV = 'production'
 
 # 若依管理系统/生产环境
-VUE_APP_BASE_API = '/dataView'
+VUE_APP_BASE_API = '/api'
 
 # 生产环境打包命令：npm run build:prod
