--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ VUE_APP_TITLE = autumn-vue管理系统
 ENV = 'development'
 
 # 若依管理系统/开发环境
-VUE_APP_BASE_API = '/dataView'
+VUE_APP_BASE_API = '/api'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
