--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "less": "^4.1.2",
     "less-loader": "^7.3.0",
     "nprogress": "^0.2.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vue": "^2.6.11",
     "vue-cropper": "^0.5.8",
     "vue-router": "^3.2.0",
