--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@ VUE_APP_TITLE = autumn-vue管理系统
 # 生产环境配置
 ENV = 'production'
 
-# 若依管理系统/生产环境
+# 生产环境
 VUE_APP_BASE_API = '/api'
 
 # 生产环境打包命令：npm run build:prod
