--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "e-icon-picker": "^1.1.6",
