--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@form-create/designer": "^1.0.10",
+    "@form-create/element-ui": "^2.5.17",
     "axios": "^0.24.0",
     "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
