--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ ENV = 'development'
 
 # 开发环境
 VUE_APP_BASE_API = '/api'
+VUE_APP_SERVER_URL = 'http://localhost:9001'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
