--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,7 @@ ENV = 'development'
 # 开发环境
 VUE_APP_BASE_API = '/api'
 VUE_APP_SERVER_URL = 'http://localhost:9001'
+VUE_APP_WS_SERVER_URL = 'ws://localhost:9001'
 
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
