--- a/.env.development
+++ b/.env.development
@@ -4,9 +4,10 @@ VUE_APP_TITLE = autumn-vue管理系统
 # 开发环境配置
 ENV = 'development'
 
-# 开发环境
 VUE_APP_BASE_API = '/api'
+# 后端服务地址
 VUE_APP_SERVER_URL = 'http://localhost:9001'
+# 后端 websocket 连接地址
 VUE_APP_WS_SERVER_URL = 'ws://localhost:9001'
 
 # 路由懒加载
